name:                stable-heap
version:             0.1.0.0
synopsis:            Purely functional stable heaps (fair priority queues)
description:
        This library provides a purely functional implementation of
        stable heaps (fair priority queues). The data structure is a
        cousin of the pairing heap, but it maintains a sequential
        ordering of the keys. Insertion can be to either end of the
        heap, as though it is a deque, and it can be split on the
        left-most occurrence of the minimum key.
license:             MIT
license-file:        LICENSE
author:              Jake McArthur
maintainer:          Jake.McArthur@gmail.com
copyright:           Copyright (C) 2015 Jake McArthur
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Heap.Stable
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-extensions:    DeriveTraversable, TypeFamilies
