cabal-version:       2.2
name:                stable-heap
version:             0.2.1.0
synopsis:            Purely functional stable heaps (fair priority queues)
description:
        This library provides a purely functional implementation of
        stable heaps (fair priority queues). The data structure is a
        cousin of the pairing heap which maintains a sequential
        ordering of the keys. Insertion can be to either end of the
        heap, as though it is a deque, and it can be split on the
        left-most occurrence of the minimum key.
        .
        The current state of the package is fairly barebones. It will
        be fleshed out later.
license:             MIT
license-file:        LICENSE
author:              Jake McArthur
maintainer:          Jake.McArthur@gmail.com
copyright:           Copyright (C) 2015-2023 Jake McArthur
homepage:            https://github.com/jmcarthur/stable-heap
bug-reports:         https://github.com/jmcarthur/stable-heap/issues
category:            Data Structures
build-type:          Simple
stability:           experimental
tested-with:         GHC ==9.6.7,
                     GHC ==9.8.4,
                     GHC ==9.10.3,
                     GHC ==9.12.2

library
  exposed-modules:     Data.Heap.Stable
  build-depends:       base ^>=4.18 || ^>=4.19 || ^>=4.20 || ^>=4.21
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-extensions:    DeriveTraversable, Trustworthy, TypeFamilies

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  build-depends:       base,
                       QuickCheck ^>=2.16,
                       stable-heap,
                       tasty ^>=1.5,
                       tasty-quickcheck ^>=0.11,
                       transformers ^>=0.6
  main-is:             Test.hs
  default-language:    Haskell2010

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  build-depends:       base,
                       criterion ^>=1.6,
                       fingertree ^>=0.1,
                       heaps ^>=0.4,
                       mwc-random ^>=0.15,
                       pqueue ^>=1.6,
                       stable-heap
  main-is:             Bench.hs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jmcarthur/stable-heap.git

source-repository this
  type:     git
  location: https://github.com/jmcarthur/stable-heap.git
  tag:      v0.2.1.0
